# multiscope-decrosstalk-qc-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
decrosstalk_qc/: __init__.py  arrays.py  images.py  io.py  labels.py  metrics.py  plots.py  repro_estimator.py  scan.py
decrosstalk_qc/app/: __init__.py  main.py  model.py  viewer.py
